Revert "refactor: separate payment/owner address for TX signup endpoint (#162)"
This reverts commit 84bea69ecd12f9935c4bd587c30a120d0f260af3.
